--- a/styles/TextMessage.css
+++ b/styles/TextMessage.css
@@ -8,7 +8,7 @@
   background: var(--menu-background);
   border-top: 1px solid var(--menu-border-color);
   color: var(--menu-font-color);
-  z-index: 20;
+  z-index: 100;
   text-align: justify;
 }
 .TextMessage_p {
